--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-wc": "vue-cli-service build --target=wc --name=rc-dropdown ./src/wc-main.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vue/web-component-wrapper": "^1.2.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
