--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
-  "name": "@vagrantir/rc-dropdown",
-  "version": "1.0.0",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vagrantir/rc-dropdown"
-  },
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-wc": "vue-cli-service build --target=wc --name=rc-dropdown ./src/wc-main.js",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "test:unit-watch": "vue-cli-service test:unit --watch"
-  },
-  "dependencies": {
-    "@vue/web-component-wrapper": "^1.2.0",
-    "vue": "^2.5.17"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-plugin-unit-mocha": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
-    "@vue/eslint-config-airbnb": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
-    "jsdom": "^12.2.0",
-    "jsdom-global": "^3.0.2",
-    "lint-staged": "^7.2.2",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
-      "git add"
+    "name": "@vagrantir/rc-dropdown",
+    "version": "1.0.0",
+    "private": true,
+    "main": "dist/rc-dropdown.min.js",
+    "license": "MIT",
+    "keywords": [
+        "vue",
+        "components",
+        "dropdown"
     ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
-  }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vagrantir/rc-dropdown"
+    },
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "build-wc": "vue-cli-service build --target=wc --name=rc-dropdown ./src/wc-main.js",
+        "lint": "vue-cli-service lint",
+        "test:unit": "vue-cli-service test:unit",
+        "test:unit-watch": "vue-cli-service test:unit --watch",
+        "publish": "vue-cli-service test:unit && vue-cli-service build --target=wc --name=rc-dropdown ./src/wc-main.js"
+    },
+    "unpkg": "dist/rc-dropdown.min.js",
+    "dependencies": {
+        "@vue/web-component-wrapper": "^1.2.0",
+        "vue": "^2.5.17"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.0.1",
+        "@vue/cli-plugin-eslint": "^3.0.1",
+        "@vue/cli-plugin-unit-mocha": "^3.0.1",
+        "@vue/cli-service": "^3.0.1",
+        "@vue/eslint-config-airbnb": "^3.0.4",
+        "@vue/test-utils": "^1.0.0-beta.20",
+        "chai": "^4.1.2",
+        "jsdom": "^12.2.0",
+        "jsdom-global": "^3.0.2",
+        "lint-staged": "^7.2.2",
+        "vue-template-compiler": "^2.5.17"
+    },
+    "gitHooks": {
+        "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.js": [
+            "vue-cli-service lint",
+            "git add"
+        ],
+        "*.vue": [
+            "vue-cli-service lint",
+            "git add"
+        ]
+    }
 }
