--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "@vagrantir/rc-dropdown",
     "version": "1.1.1",
     "private": false,
-    "main": "esm/RcDropdown.esm.js",
-    "module": "esm/RcDropdown.esm.js",
+    "main": "./src/components/RcDropdown.vue",
+    "module": "./src/components/RcDropdown.vue",
     "license": "MIT",
     "keywords": [
         "vue",
